# vocence-agents-plugins

./: .gitignore  CHANGELOG.md  README.md
python/: README.md  pyproject.toml
python/src/vocence_plugins/: __init__.py  _lang.py  stt.py  tts.py
