[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "vocence-plugins"
dynamic = ["version"]
description = "Vocence voice plug-ins — drop custom-cloned voices and streaming speech recognition into your real-time voice agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Vocence", email = "space@vocence.ai" }]
keywords = ["vocence", "voice-agents", "tts", "stt", "voice-cloning", "realtime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.9",
    # The plug-ins implement the abstract interfaces of a compatible
    # real-time agent framework. Required at runtime.
    "videosdk-agents>=0.1.0",
]

[project.urls]
Homepage = "https://www.vocence.ai"
Documentation = "https://www.vocence.ai/docs/sdk-agents"
Repository = "https://github.com/concil859856/vocence-plugins"
Issues = "https://github.com/concil859856/vocence-plugins/issues"

[tool.hatch.version]
path = "src/vocence_plugins/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vocence_plugins"]
